# embedded_deformation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yaml  tests_config.yaml
app/: embedded_deformation.cpp  embedded_deformation_sample.cpp
data/: FAUST_dabing.csv  FAUST_move_hand.csv  drill_rotation.csv  input.ply  output.ply  skeleton_correspondence.csv
data/graphs_test/: 6_disconnected.mtl  graph_model.blend
embedded_deformation/: CMakeLists.txt  config.yaml
embedded_deformation/include/embedded_deformation/: costFunction.hpp  downsampling.hpp  embedDeform.hpp  farther_sampling.hpp  getMinMax.hpp  nanoflannWrapper.hpp  options.hpp  surface_association.hpp
embedded_deformation/src/embedded_deformation/: embedDeform.cpp
external_libraries/: CMakeLists.txt
include/embedded_deformation/: costFunction.hpp  downsampling.hpp  embedDeform.cpp  embedDeform.hpp  farther_sampling.hpp  getMinMax.hpp  greedySearch.cpp  greedySearch.hpp  nanoflannWrapper.hpp
utils/: options.hpp  plotCloud.hpp  plotMesh.hpp  polyscopeWrapper.hpp
utils/IO/: list_to_matrix.cpp  list_to_matrix.h  loadCSV.hpp  max_size.cpp  max_size.h  min_size.cpp  min_size.h  readOBJ.cpp  readOBJ.h  readOFF.cpp  readOFF.h  readPLY.cpp  readPLY.h  readSTL.cpp  readSTL.h  writeOBJ.cpp  writeOBJ.h  writeOFF.cpp  writeOFF.h  writePLY.cpp  writePLY.h
utils/libGraphCpp/: graph.hpp  graphOptions.hpp  readGraphOBJ.hpp  writeGraphOBJ.hpp
